pre release data

--- a/Assembly-CSharp-Editor-vs.csproj
+++ b/Assembly-CSharp-Editor-vs.csproj
@@ -5,11 +5,11 @@
 	<Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
 	<ProductVersion>10.0.20506</ProductVersion>
 	<SchemaVersion>2.0</SchemaVersion>
-	<ProjectGuid>{BD0BD731-5A67-F263-4EFE-05333DBD29A3}</ProjectGuid>
+	<ProjectGuid>{8EFCC762-3A32-63A4-11FD-A8DD841E392D}</ProjectGuid>
 	<OutputType>Library</OutputType>
 	<AppDesignerFolder>Properties</AppDesignerFolder>
 	<RootNamespace></RootNamespace>
-	<AssemblyName>Assembly-CSharp</AssemblyName>
+	<AssemblyName>Assembly-CSharp-Editor</AssemblyName>
 	<TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
 	<FileAlignment>512</FileAlignment>
 	<BaseDirectory>Assets</BaseDirectory>
@@ -46,52 +46,65 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\FlaExporter\Data\RawData\FillStyles\FillStyles\FlaBaseFillStyleRaw.cs" />
-     <Compile Include="Assets\FlaExporter\Data\RawData\FillStyles\FillStyles\FlaBitmapFillRaw.cs" />
-     <Compile Include="Assets\FlaExporter\Data\RawData\FillStyles\FillStyles\FlaSolidColorFillStyleRaw.cs" />
-     <Compile Include="Assets\FlaExporter\Data\RawData\FillStyles\FillStyles\GradientFillStyles\FlaBaseGradientRaw.cs" />
-     <Compile Include="Assets\FlaExporter\Data\RawData\FillStyles\FillStyles\GradientFillStyles\FlaGradientEntryRaw.cs" />
-     <Compile Include="Assets\FlaExporter\Data\RawData\FillStyles\FillStyles\GradientFillStyles\FlaLinearGradientFillStyleRaw.cs" />
-     <Compile Include="Assets\FlaExporter\Data\RawData\FillStyles\FillStyles\GradientFillStyles\FlaRadialGradientFillStyleRaw.cs" />
-     <Compile Include="Assets\FlaExporter\Data\RawData\FillStyles\FlaFillStyleRaw.cs" />
-     <Compile Include="Assets\FlaExporter\Data\RawData\FlaBitmapItemRaw.cs" />
-     <Compile Include="Assets\FlaExporter\Data\RawData\FlaDocumentRaw.cs" />
-     <Compile Include="Assets\FlaExporter\Data\RawData\FlaFrameRaw.cs" />
-     <Compile Include="Assets\FlaExporter\Data\RawData\FlaIncludeRaw.cs" />
-     <Compile Include="Assets\FlaExporter\Data\RawData\FlaLayerRaw.cs" />
-     <Compile Include="Assets\FlaExporter\Data\RawData\FlaPersistentDataRaw.cs" />
-     <Compile Include="Assets\FlaExporter\Data\RawData\FlaSymbolItemRaw.cs" />
-     <Compile Include="Assets\FlaExporter\Data\RawData\FlaTimeLineRaw.cs" />
-     <Compile Include="Assets\FlaExporter\Data\RawData\FlaTimelineElementRaw.cs" />
-     <Compile Include="Assets\FlaExporter\Data\RawData\FrameElements\FlaFrameElementRaw.cs" />
-     <Compile Include="Assets\FlaExporter\Data\RawData\FrameElements\FlaShapeRaw.cs" />
-     <Compile Include="Assets\FlaExporter\Data\RawData\FrameElements\FlaSymbolInstanceRaw.cs" />
-     <Compile Include="Assets\FlaExporter\Data\RawData\Geom\FlaEdgeRaw.cs" />
-     <Compile Include="Assets\FlaExporter\Data\RawData\Geom\FlaMatrixElemetRaw.cs" />
-     <Compile Include="Assets\FlaExporter\Data\RawData\Geom\FlaMatrixRaw.cs" />
-     <Compile Include="Assets\FlaExporter\Data\RawData\Geom\FlaPointRaw.cs" />
-     <Compile Include="Assets\FlaExporter\Data\RawData\Geom\FlaTransformationPointElementRaw.cs" />
-     <Compile Include="Assets\FlaExporter\Data\RawData\StorkeStyle\FlaStorkeFillRaw.cs" />
-     <Compile Include="Assets\FlaExporter\Data\RawData\StorkeStyle\FlaStorkeStyleRaw.cs" />
-     <Compile Include="Assets\FlaExporter\Data\RawData\StorkeStyle\StorkeStyles\FlaBaseStorkyStyleRaw.cs" />
-     <Compile Include="Assets\FlaExporter\Data\RawData\StorkeStyle\StorkeStyles\FlaDashedStrokeStyleRaw.cs" />
-     <Compile Include="Assets\FlaExporter\Data\RawData\StorkeStyle\StorkeStyles\FlaDottedStrokeStyleRaw.cs" />
-     <Compile Include="Assets\FlaExporter\Data\RawData\StorkeStyle\StorkeStyles\FlaRaggedStrokeStyleRaw.cs" />
-     <Compile Include="Assets\FlaExporter\Data\RawData\StorkeStyle\StorkeStyles\FlaSolidStrokeStyleRaw.cs" />
-     <Compile Include="Assets\FlaExporter\Data\RawData\StorkeStyle\StorkeStyles\FlaStippleStrokeStyleRaw.cs" />
-     <Compile Include="Assets\FlaExporter\Data\RawData\StorkeStyle\StorkeStyles\FlaVariablePointWidthRaw.cs" />
+     <Compile Include="Assets\FlaExporter\Editor\FlaExporterEditorWindow.cs" />
+     <Compile Include="Assets\FlaExporter\Editor\PrettyPrint.cs" />
+     <Compile Include="Assets\FlaExporter\Editor\StringExtention.cs" />
+     <Compile Include="Assets\FlaExporter\Editor\XMLExtention.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
+ </Reference>
+ <Reference Include="UnityEditor.UI">
+ <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/Editor/UnityEditor.UI.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.Networking">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/Networking/UnityEngine.Networking.dll</HintPath>
  </Reference>
+ <Reference Include="UnityEditor.Networking">
+ <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/Networking/Editor/UnityEditor.Networking.dll</HintPath>
+ </Reference>
  <Reference Include="UnityEngine.Analytics">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnityAnalytics/UnityEngine.Analytics.dll</HintPath>
+ </Reference>
+ <Reference Include="UnityEditor.Graphs">
+ <HintPath>C:/Program Files/Unity/Editor/Data/Managed/UnityEditor.Graphs.dll</HintPath>
+ </Reference>
+ <Reference Include="UnityEditor.Android.Extensions">
+ <HintPath>C:/Program Files/Unity/Editor/Data/PlaybackEngines/androidplayer/UnityEditor.Android.Extensions.dll</HintPath>
+ </Reference>
+ <Reference Include="UnityEditor.iOS.Extensions">
+ <HintPath>C:/Program Files/Unity/Editor/Data/PlaybackEngines/iOSSupport/UnityEditor.iOS.Extensions.dll</HintPath>
+ </Reference>
+ <Reference Include="UnityEditor.WP8.Extensions">
+ <HintPath>C:/Program Files/Unity/Editor/Data/PlaybackEngines/wp8support/UnityEditor.WP8.Extensions.dll</HintPath>
+ </Reference>
+ <Reference Include="UnityEditor.Metro.Extensions">
+ <HintPath>C:/Program Files/Unity/Editor/Data/PlaybackEngines/metrosupport/UnityEditor.Metro.Extensions.dll</HintPath>
+ </Reference>
+ <Reference Include="UnityEditor.BB10.Extensions">
+ <HintPath>C:/Program Files/Unity/Editor/Data/PlaybackEngines/blackberryplayer/UnityEditor.BB10.Extensions.dll</HintPath>
+ </Reference>
+ <Reference Include="UnityEditor.Tizen.Extensions">
+ <HintPath>C:/Program Files/Unity/Editor/Data/PlaybackEngines/TizenPlayer/TizenPlayer/UnityEditor.Tizen.Extensions.dll</HintPath>
+ </Reference>
+ <Reference Include="UnityEditor.WebGL.Extensions">
+ <HintPath>C:/Program Files/Unity/Editor/Data/PlaybackEngines/webglsupport/UnityEditor.WebGL.Extensions.dll</HintPath>
+ </Reference>
+ <Reference Include="UnityEditor.LinuxStandalone.Extensions">
+ <HintPath>C:/Program Files/Unity/Editor/Data/PlaybackEngines/linuxstandalonesupport/UnityEditor.LinuxStandalone.Extensions.dll</HintPath>
+ </Reference>
+ <Reference Include="UnityEditor.WindowsStandalone.Extensions">
+ <HintPath>C:/Program Files/Unity/Editor/Data/PlaybackEngines/windowsstandalonesupport/UnityEditor.WindowsStandalone.Extensions.dll</HintPath>
+ </Reference>
+ <Reference Include="UnityEditor.OSXStandalone.Extensions">
+ <HintPath>C:/Program Files/Unity/Editor/Data/PlaybackEngines/macstandalonesupport/UnityEditor.OSXStandalone.Extensions.dll</HintPath>
  </Reference>
  <Reference Include="UnityEditor.iOS.Extensions.Xcode">
  <HintPath>C:/Program Files/Unity/Editor/Data/PlaybackEngines/iOSSupport/UnityEditor.iOS.Extensions.Xcode.dll</HintPath>
  </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="Assembly-CSharp-vs.csproj">
+      <Project>{BD0BD731-5A67-F263-4EFE-05333DBD29A3}</Project>      <Name>Assembly-CSharp-vs</Name>    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
