--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -1,87 +1,97 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>10.0.20506</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{BD0BD731-5A67-F263-4EFE-05333DBD29A3}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>
-    </RootNamespace>
-    <AssemblyName>Assembly-CSharp</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <BaseDirectory>Assets</BaseDirectory>
+	<Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+	<Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+	<ProductVersion>10.0.20506</ProductVersion>
+	<SchemaVersion>2.0</SchemaVersion>
+	<ProjectGuid>{BD0BD731-5A67-F263-4EFE-05333DBD29A3}</ProjectGuid>
+	<OutputType>Library</OutputType>
+	<AppDesignerFolder>Properties</AppDesignerFolder>
+	<RootNamespace></RootNamespace>
+	<AssemblyName>Assembly-CSharp</AssemblyName>
+	<TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+	<FileAlignment>512</FileAlignment>
+	<BaseDirectory>Assets</BaseDirectory>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>Temp\bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE;UNITY_5_1_3;UNITY_5_1;UNITY_5;ENABLE_NEW_BUGREPORTER;ENABLE_2D_PHYSICS;ENABLE_4_6_FEATURES;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_DUCK_TYPING;ENABLE_FRAME_DEBUGGER;ENABLE_GENERICS;ENABLE_HOME_SCREEN;ENABLE_IMAGEEFFECTS;ENABLE_LIGHT_PROBES_LEGACY;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_PHYSICS_PHYSX3;ENABLE_PLUGIN_INSPECTOR;ENABLE_SHADOWS;ENABLE_SINGLE_INSTANCE_BUILD_SETTING;ENABLE_SPRITES;ENABLE_TERRAIN;ENABLE_UNET;ENABLE_UNITYEVENTS;ENABLE_VR;ENABLE_WEBCAM;ENABLE_WWW;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_LICENSE;ENABLE_AUDIOMIXER_SUSPEND;ENABLE_EDITOR_METRICS;INCLUDE_DYNAMIC_GI;INCLUDE_GI;INCLUDE_IL2CPP;INCLUDE_DIRECTX12;PLATFORM_SUPPORTS_MONO;RENDER_SOFTWARE_CURSOR;ENABLE_LOCALIZATION;UNITY_STANDALONE_WIN;UNITY_STANDALONE;ENABLE_SUBSTANCE;ENABLE_TEXTUREID_MAP;ENABLE_RUNTIME_GI;ENABLE_MOVIES;ENABLE_NETWORK;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_WEBSOCKET_HOST;ENABLE_MONO;ENABLE_PROFILER;DEBUG;TRACE;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_WIN;UNITY_TEAM_LICENSE;UNITY_PRO_LICENSE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <NoWarn>0169</NoWarn>
+	<DebugSymbols>true</DebugSymbols>
+	<DebugType>full</DebugType>
+	<Optimize>false</Optimize>
+	<OutputPath>Temp\bin\Debug\</OutputPath>
+	<DefineConstants>DEBUG;TRACE;UNITY_5_1_2;UNITY_5_1;UNITY_5;ENABLE_NEW_BUGREPORTER;ENABLE_2D_PHYSICS;ENABLE_4_6_FEATURES;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_DUCK_TYPING;ENABLE_FRAME_DEBUGGER;ENABLE_GENERICS;ENABLE_HOME_SCREEN;ENABLE_IMAGEEFFECTS;ENABLE_LIGHT_PROBES_LEGACY;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_PHYSICS_PHYSX3;ENABLE_PLUGIN_INSPECTOR;ENABLE_SHADOWS;ENABLE_SINGLE_INSTANCE_BUILD_SETTING;ENABLE_SPRITES;ENABLE_TERRAIN;ENABLE_UNET;ENABLE_UNITYEVENTS;ENABLE_VR;ENABLE_WEBCAM;ENABLE_WWW;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_LICENSE;ENABLE_AUDIOMIXER_SUSPEND;ENABLE_EDITOR_METRICS;INCLUDE_DYNAMIC_GI;INCLUDE_GI;INCLUDE_IL2CPP;INCLUDE_DIRECTX12;PLATFORM_SUPPORTS_MONO;RENDER_SOFTWARE_CURSOR;ENABLE_LOCALIZATION;UNITY_STANDALONE_WIN;UNITY_STANDALONE;ENABLE_SUBSTANCE;ENABLE_TEXTUREID_MAP;ENABLE_RUNTIME_GI;ENABLE_MOVIES;ENABLE_NETWORK;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_WEBSOCKET_HOST;ENABLE_MONO;ENABLE_PROFILER;DEBUG;TRACE;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_WIN;UNITY_TEAM_LICENSE;UNITY_PRO_LICENSE</DefineConstants>
+	<ErrorReport>prompt</ErrorReport>
+	<WarningLevel>4</WarningLevel>
+	<NoWarn>0169</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>Temp\bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <NoWarn>0169</NoWarn>
+	<DebugType>pdbonly</DebugType>
+	<Optimize>true</Optimize>
+	<OutputPath>Temp\bin\Release\</OutputPath>
+	<DefineConstants>TRACE</DefineConstants>
+	<ErrorReport>prompt</ErrorReport>
+	<WarningLevel>4</WarningLevel>
+	<NoWarn>0169</NoWarn>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
+	<Reference Include="System" />
     <Reference Include="System.XML" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="UnityEngine">
-      <HintPath>D:/GameDev/Unity/Editor/Data/Managed/UnityEngine.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEditor">
-      <HintPath>D:/GameDev/Unity/Editor/Data/Managed/UnityEditor.dll</HintPath>
-    </Reference>
+	<Reference Include="System.Core" />
+	<Reference Include="System.Xml.Linq" />
+	<Reference Include="UnityEngine">
+	  <HintPath>C:/Program Files/Unity/Editor/Data/Managed/UnityEngine.dll</HintPath>
+	</Reference>
+	<Reference Include="UnityEditor">
+	  <HintPath>C:/Program Files/Unity/Editor/Data/Managed/UnityEditor.dll</HintPath>
+	</Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\FlaExporter\Data\RawData\FillStyles\FlaBaseFillStyleRaw.cs" />
-    <Compile Include="Assets\FlaExporter\Data\RawData\FlaDocumentRaw.cs" />
-    <Compile Include="Assets\FlaExporter\Data\RawData\FillStyles\FlaFillStyleRaw.cs" />
-    <Compile Include="Assets\FlaExporter\Data\RawData\Geom\FlaEdgeRaw.cs" />
-    <Compile Include="Assets\FlaExporter\Data\RawData\StorkeStyle\FlaBaseStorkyStyleRaw.cs" />
-    <Compile Include="Assets\FlaExporter\Data\RawData\FrameElements\FlaFrameElementRaw.cs" />
-    <Compile Include="Assets\FlaExporter\Data\RawData\FlaFrameRaw.cs" />
-    <Compile Include="Assets\FlaExporter\Data\RawData\FlaIncludeRaw.cs" />
-    <Compile Include="Assets\FlaExporter\Data\RawData\FlaLayerRaw.cs" />
-    <Compile Include="Assets\FlaExporter\Data\RawData\FillStyles\FlaLinearGradientFillStyleRaw.cs" />
-    <Compile Include="Assets\FlaExporter\Data\RawData\StorkeStyle\FlaSolidStrokeStyleRaw.cs" />
-    <Compile Include="Assets\FlaExporter\Data\RawData\StorkeStyle\FlaStorkeFillRaw.cs" />
-    <Compile Include="Assets\FlaExporter\Data\RawData\StorkeStyle\FlaStorkeStyleRaw.cs" />
-    <Compile Include="Assets\FlaExporter\Data\RawData\Geom\FlaMatrixElemetRaw.cs" />
-    <Compile Include="Assets\FlaExporter\Data\RawData\Geom\FlaMatrixRaw.cs" />
-    <Compile Include="Assets\FlaExporter\Data\RawData\FlaPersistentDataRaw.cs" />
-    <Compile Include="Assets\FlaExporter\Data\RawData\Geom\FlaPointRaw.cs" />
-    <Compile Include="Assets\FlaExporter\Data\RawData\FillStyles\FlaRadialGradientFillStyleRaw.cs" />
-    <Compile Include="Assets\FlaExporter\Data\RawData\FrameElements\FlaShapeRaw.cs" />
-    <Compile Include="Assets\FlaExporter\Data\RawData\FillStyles\FlaSolidColorFillStyleRaw.cs" />
-    <Compile Include="Assets\FlaExporter\Data\RawData\FrameElements\FlaSymbolInstanceRaw.cs" />
-    <Compile Include="Assets\FlaExporter\Data\RawData\FlaTimeLineRaw.cs" />
-    <Compile Include="Assets\FlaExporter\Data\RawData\Geom\FlaTransformationPointElementRaw.cs" />
-    <Reference Include="UnityEngine.UI">
-      <HintPath>D:/GameDev/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.Networking">
-      <HintPath>D:/GameDev/Unity/Editor/Data/UnityExtensions/Unity/Networking/UnityEngine.Networking.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.Analytics">
-      <HintPath>D:/GameDev/Unity/Editor/Data/UnityExtensions/Unity/UnityAnalytics/UnityEngine.Analytics.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEditor.iOS.Extensions.Xcode">
-      <HintPath>D:/GameDev/Unity/Editor/Data/PlaybackEngines/iOSSupport/UnityEditor.iOS.Extensions.Xcode.dll</HintPath>
-    </Reference>
+     <Compile Include="Assets\FlaExporter\Data\RawData\FillStyles\FillStyles\FlaBaseFillStyleRaw.cs" />
+     <Compile Include="Assets\FlaExporter\Data\RawData\FillStyles\FillStyles\FlaBitmapFillRaw.cs" />
+     <Compile Include="Assets\FlaExporter\Data\RawData\FillStyles\FillStyles\FlaSolidColorFillStyleRaw.cs" />
+     <Compile Include="Assets\FlaExporter\Data\RawData\FillStyles\FillStyles\GradientFillStyles\FlaBaseGradientRaw.cs" />
+     <Compile Include="Assets\FlaExporter\Data\RawData\FillStyles\FillStyles\GradientFillStyles\FlaGradientEntryRaw.cs" />
+     <Compile Include="Assets\FlaExporter\Data\RawData\FillStyles\FillStyles\GradientFillStyles\FlaLinearGradientFillStyleRaw.cs" />
+     <Compile Include="Assets\FlaExporter\Data\RawData\FillStyles\FillStyles\GradientFillStyles\FlaRadialGradientFillStyleRaw.cs" />
+     <Compile Include="Assets\FlaExporter\Data\RawData\FillStyles\FlaFillStyleRaw.cs" />
+     <Compile Include="Assets\FlaExporter\Data\RawData\FlaBitmapItemRaw.cs" />
+     <Compile Include="Assets\FlaExporter\Data\RawData\FlaDocumentRaw.cs" />
+     <Compile Include="Assets\FlaExporter\Data\RawData\FlaFrameRaw.cs" />
+     <Compile Include="Assets\FlaExporter\Data\RawData\FlaIncludeRaw.cs" />
+     <Compile Include="Assets\FlaExporter\Data\RawData\FlaLayerRaw.cs" />
+     <Compile Include="Assets\FlaExporter\Data\RawData\FlaPersistentDataRaw.cs" />
+     <Compile Include="Assets\FlaExporter\Data\RawData\FlaSymbolItemRaw.cs" />
+     <Compile Include="Assets\FlaExporter\Data\RawData\FlaTimeLineRaw.cs" />
+     <Compile Include="Assets\FlaExporter\Data\RawData\FlaTimelineElementRaw.cs" />
+     <Compile Include="Assets\FlaExporter\Data\RawData\FrameElements\FlaFrameElementRaw.cs" />
+     <Compile Include="Assets\FlaExporter\Data\RawData\FrameElements\FlaShapeRaw.cs" />
+     <Compile Include="Assets\FlaExporter\Data\RawData\FrameElements\FlaSymbolInstanceRaw.cs" />
+     <Compile Include="Assets\FlaExporter\Data\RawData\Geom\FlaEdgeRaw.cs" />
+     <Compile Include="Assets\FlaExporter\Data\RawData\Geom\FlaMatrixElemetRaw.cs" />
+     <Compile Include="Assets\FlaExporter\Data\RawData\Geom\FlaMatrixRaw.cs" />
+     <Compile Include="Assets\FlaExporter\Data\RawData\Geom\FlaPointRaw.cs" />
+     <Compile Include="Assets\FlaExporter\Data\RawData\Geom\FlaTransformationPointElementRaw.cs" />
+     <Compile Include="Assets\FlaExporter\Data\RawData\StorkeStyle\FlaStorkeFillRaw.cs" />
+     <Compile Include="Assets\FlaExporter\Data\RawData\StorkeStyle\FlaStorkeStyleRaw.cs" />
+     <Compile Include="Assets\FlaExporter\Data\RawData\StorkeStyle\StorkeStyles\FlaBaseStorkyStyleRaw.cs" />
+     <Compile Include="Assets\FlaExporter\Data\RawData\StorkeStyle\StorkeStyles\FlaDashedStrokeStyleRaw.cs" />
+     <Compile Include="Assets\FlaExporter\Data\RawData\StorkeStyle\StorkeStyles\FlaDottedStrokeStyleRaw.cs" />
+     <Compile Include="Assets\FlaExporter\Data\RawData\StorkeStyle\StorkeStyles\FlaRaggedStrokeStyleRaw.cs" />
+     <Compile Include="Assets\FlaExporter\Data\RawData\StorkeStyle\StorkeStyles\FlaSolidStrokeStyleRaw.cs" />
+     <Compile Include="Assets\FlaExporter\Data\RawData\StorkeStyle\StorkeStyles\FlaStippleStrokeStyleRaw.cs" />
+     <Compile Include="Assets\FlaExporter\Data\RawData\StorkeStyle\StorkeStyles\FlaVariablePointWidthRaw.cs" />
+ <Reference Include="UnityEngine.UI">
+ <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
+ </Reference>
+ <Reference Include="UnityEngine.Networking">
+ <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/Networking/UnityEngine.Networking.dll</HintPath>
+ </Reference>
+ <Reference Include="UnityEngine.Analytics">
+ <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnityAnalytics/UnityEngine.Analytics.dll</HintPath>
+ </Reference>
+ <Reference Include="UnityEditor.iOS.Extensions.Xcode">
+ <HintPath>C:/Program Files/Unity/Editor/Data/PlaybackEngines/iOSSupport/UnityEditor.iOS.Extensions.Xcode.dll</HintPath>
+ </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
@@ -91,4 +101,5 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  
 </Project>
