--- a/Assembly-CSharp-Editor-vs.csproj
+++ b/Assembly-CSharp-Editor-vs.csproj
@@ -46,10 +46,14 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\FlaExporter\Editor\Extentions\PrettyPrintExtention.cs" />
+     <Compile Include="Assets\FlaExporter\Editor\Extentions\StringExtention.cs" />
+     <Compile Include="Assets\FlaExporter\Editor\Extentions\XMLExtention.cs" />
+     <Compile Include="Assets\FlaExporter\Editor\Extentions\ZipExtention.cs" />
      <Compile Include="Assets\FlaExporter\Editor\FlaExporterEditorWindow.cs" />
-     <Compile Include="Assets\FlaExporter\Editor\PrettyPrint.cs" />
-     <Compile Include="Assets\FlaExporter\Editor\StringExtention.cs" />
-     <Compile Include="Assets\FlaExporter\Editor\XMLExtention.cs" />
+     <Compile Include="Assets\FlaExporter\Editor\FlaParser.cs" />
+     <Compile Include="Assets\FlaExporter\Editor\FlaProcessor.cs" />
+     <Compile Include="Assets\FlaExporter\Editor\Utils\FolderAndFileUtils.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
@@ -64,6 +68,9 @@
  </Reference>
  <Reference Include="UnityEngine.Analytics">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnityAnalytics/UnityEngine.Analytics.dll</HintPath>
+ </Reference>
+ <Reference Include="Ionic.Zip">
+ <HintPath>C:/projects/FlaExporter/Assets/FlaExporter/Editor/Library/Ionic.Zip.dll</HintPath>
  </Reference>
  <Reference Include="UnityEditor.Graphs">
  <HintPath>C:/Program Files/Unity/Editor/Data/Managed/UnityEditor.Graphs.dll</HintPath>
@@ -97,9 +104,6 @@
  </Reference>
  <Reference Include="UnityEditor.OSXStandalone.Extensions">
  <HintPath>C:/Program Files/Unity/Editor/Data/PlaybackEngines/macstandalonesupport/UnityEditor.OSXStandalone.Extensions.dll</HintPath>
- </Reference>
- <Reference Include="Ionic.Zip">
- <HintPath>C:/projects/FlaExporter/Assets/FlaExporter/Editor/Library/Ionic.Zip.dll</HintPath>
  </Reference>
  <Reference Include="UnityEditor.iOS.Extensions.Xcode">
  <HintPath>C:/Program Files/Unity/Editor/Data/PlaybackEngines/iOSSupport/UnityEditor.iOS.Extensions.Xcode.dll</HintPath>
