shape in progress

--- a/Assembly-CSharp-Editor-vs.csproj
+++ b/Assembly-CSharp-Editor-vs.csproj
@@ -52,6 +52,7 @@
      <Compile Include="Assets\FlaExporter\Editor\Extentions\ZipExtention.cs" />
      <Compile Include="Assets\FlaExporter\Editor\FlaExporterEditorWindow.cs" />
      <Compile Include="Assets\FlaExporter\Editor\FlaProcessor.cs" />
+     <Compile Include="Assets\FlaExporter\Editor\FlaShapeProcessor.cs" />
      <Compile Include="Assets\FlaExporter\Editor\FoldersConstants.cs" />
      <Compile Include="Assets\FlaExporter\Editor\Utils\FolderAndFileUtils.cs" />
  <Reference Include="UnityEngine.UI">
