--- a/Assembly-CSharp-Editor.csproj
+++ b/Assembly-CSharp-Editor.csproj
@@ -46,6 +46,8 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\FlaExporter\Editor\EditorCoroutine\EditorCoroutine.cs" />
+     <Compile Include="Assets\FlaExporter\Editor\EditorCoroutine\EditorCoroutineExtention.cs" />
      <Compile Include="Assets\FlaExporter\Editor\Extentions\PrettyPrintExtention.cs" />
      <Compile Include="Assets\FlaExporter\Editor\Extentions\StringExtention.cs" />
      <Compile Include="Assets\FlaExporter\Editor\Extentions\XMLExtention.cs" />
