--- a/Assembly-CSharp-Editor-vs.csproj
+++ b/Assembly-CSharp-Editor-vs.csproj
@@ -46,11 +46,13 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\FlaExporter\Editor\CurveHelper\CurveHelper.cs" />
      <Compile Include="Assets\FlaExporter\Editor\EditorCoroutine\EditorCoroutine.cs" />
      <Compile Include="Assets\FlaExporter\Editor\EditorCoroutine\EditorCoroutineExtention.cs" />
      <Compile Include="Assets\FlaExporter\Editor\Extentions\FlaShapeRawExtention.cs" />
      <Compile Include="Assets\FlaExporter\Editor\Extentions\PrettyPrintExtention.cs" />
      <Compile Include="Assets\FlaExporter\Editor\Extentions\StringExtention.cs" />
+     <Compile Include="Assets\FlaExporter\Editor\Extentions\TransformExtention.cs" />
      <Compile Include="Assets\FlaExporter\Editor\Extentions\XMLExtention.cs" />
      <Compile Include="Assets\FlaExporter\Editor\Extentions\ZipExtention.cs" />
      <Compile Include="Assets\FlaExporter\Editor\FlaExporterEditorWindow.cs" />
