so many fixes !

--- a/Assembly-CSharp-Editor-vs.csproj
+++ b/Assembly-CSharp-Editor-vs.csproj
@@ -112,8 +112,8 @@
      <Compile Include="Assets\FlaExporter\Editor\EditorCoroutine\EditorCoroutine.cs" />
      <Compile Include="Assets\FlaExporter\Editor\EditorCoroutine\EditorCoroutineExtention.cs" />
      <Compile Include="Assets\FlaExporter\Editor\Extentions\AnimationCurveExtention.cs" />
-     <Compile Include="Assets\FlaExporter\Editor\Extentions\FlaFrameElementRawExtention.cs" />
-     <Compile Include="Assets\FlaExporter\Editor\Extentions\FlaShapeRawExtention.cs" />
+     <Compile Include="Assets\FlaExporter\Editor\Extentions\FlaExtentionsRaw\FlaFrameElementRawExtention.cs" />
+     <Compile Include="Assets\FlaExporter\Editor\Extentions\FlaExtentionsRaw\FlaShapeRawExtention.cs" />
      <Compile Include="Assets\FlaExporter\Editor\Extentions\PrettyPrintExtention.cs" />
      <Compile Include="Assets\FlaExporter\Editor\Extentions\StringExtention.cs" />
      <Compile Include="Assets\FlaExporter\Editor\Extentions\TransformExtention.cs" />
